Updated demo notebook

--- a/demo/2-scene_construction/scene_construction.ipynb
+++ b/demo/2-scene_construction/scene_construction.ipynb
@@ -546,46 +546,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scene_dict = (SceneDict.empty()\n",
-    "    .add(Lambertian({\n",
+    "scene_dict = SceneDict.empty().add([\n",
+    "    Lambertian({\n",
     "        \"reflectance\": 0.5, \n",
     "        \"width\": 200\n",
-    "    }))\n",
-    "    .add(RayleighHomogeneous({\n",
+    "    }),\n",
+    "    RayleighHomogeneous({\n",
     "        \"sigma_s\": 1e-2,\n",
     "        \"height\": 40.,\n",
     "        \"width\": 200.\n",
-    "    }))\n",
-    "    .add(Directional({\n",
+    "    }),\n",
+    "    Directional({\n",
     "        \"zenith\": 30.,\n",
     "        \"azimuth\": 0.,\n",
     "        \"irradiance\": 1.0e+6\n",
-    "    }))\n",
-    ")\n",
-    "\n",
-    "scene_dict.add({\n",
-    "    \"measure\": {\n",
-    "        \"type\": \"perspective\",\n",
-    "        \"sampler\": {\n",
-    "            \"type\": \"independent\",\n",
-    "            \"sample_count\": 4096\n",
+    "    }),\n",
+    "    {\n",
+    "        \"measure\": {\n",
+    "            \"type\": \"perspective\",\n",
+    "            \"sampler\": {\n",
+    "                \"type\": \"independent\",\n",
+    "                \"sample_count\": 4096\n",
+    "            },\n",
+    "            \"film\": {\n",
+    "                \"type\": \"hdrfilm\",\n",
+    "                \"width\": 64,\n",
+    "                \"height\": 64,\n",
+    "                \"component_format\": \"float32\",\n",
+    "                \"pixel_format\": \"luminance\",\n",
+    "                \"rfilter\": {\"type\": \"box\"},\n",
+    "            },\n",
+    "            \"far_clip\": 1e7,\n",
+    "            \"to_world\": ScalarTransform4f\n",
+    "                .look_at(origin=[0, 400, 400],\n",
+    "                         target=[0, 0, 0],\n",
+    "                         up=[0, 0, 1])\n",
     "        },\n",
-    "        \"film\": {\n",
-    "            \"type\": \"hdrfilm\",\n",
-    "            \"width\": 64,\n",
-    "            \"height\": 64,\n",
-    "            \"component_format\": \"float32\",\n",
-    "            \"pixel_format\": \"luminance\",\n",
-    "            \"rfilter\": {\"type\": \"box\"},\n",
-    "        },\n",
-    "        \"far_clip\": 1e7,\n",
-    "        \"to_world\": ScalarTransform4f\n",
-    "            .look_at(origin=[0, 400, 400],\n",
-    "                     target=[0, 0, 0],\n",
-    "                     up=[0, 0, 1])\n",
-    "    },\n",
-    "    \"integrator\": {\"type\": \"volpath\"}\n",
-    "})"
+    "        \"integrator\": {\"type\": \"volpath\"}\n",
+    "    }\n",
+    "])"
    ]
   },
   {
@@ -614,7 +613,7 @@
     "    \"atmosphere\": {\n",
     "        \"type\": \"cube\",\n",
     "        \"to_world\": \n",
-    "            ScalarTransform4f.translate([0, 0, 20.1]) *\n",
+    "            ScalarTransform4f.translate([0, 0, 20.001]) *\n",
     "            ScalarTransform4f.scale([100, 100, 20]),\n",
     "        # The shape is translated upward so that the bottom face does\n",
     "        # not overlap with the surface\n",
@@ -672,14 +671,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3.7.7 64-bit",
+   "language": "python",
    "name": "python37764bit13027b374c7846a8b22a568d0e77d399"
   },
   "language_info": {
@@ -692,9 +694,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7-final"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
