Updated demo scenario and part 2 notebook

--- a/demo/2-scene_construction/scene_construction.ipynb
+++ b/demo/2-scene_construction/scene_construction.ipynb
@@ -671,6 +671,149 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# One-dimensional solver interface"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Eradiate ships classes useful to perform specific computations. In this example, we will see how to use a generic one-dimensional solver used as the basic core of more complex applications.\n",
+    "\n",
+    "We start by importing the kernel and selecting a variant. We will run monochromatic simulations and therefore select the `scalar_mono_double` variant."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import eradiate.kernel\n",
+    "eradiate.kernel.set_variant(\"scalar_mono_double\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now instantiate the `OneDimSolver` class. It takes a scene geometry, optical properties and illumination, and positions sensors automatically so as to compute the radiance leaving the scene at the top of the atmosphere.\n",
+    "\n",
+    "`OneDimSolver` is designed to host pseudo one-dimensional scene, _i.e._ solve problems with two translational invariances. However, Eradiate's Mitsuba kernel does not exactly handle this type symmetries; instead, a normal three-dimensional scene is used. This means that special care must be taken when creating the scene. The scene we have been working on in the rest of this tutorial is designed with that in mind: its optical thickness in the horizontal directions is such that the point (0,0,0) is out of the radiative boundary layer and will therefore not be subject to boundary effects."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from eradiate.solvers.onedim import OneDimSolver\n",
+    "from eradiate.scenes import SceneDict\n",
+    "from eradiate.scenes.lithosphere import Lambertian\n",
+    "from eradiate.scenes.atmosphere import RayleighHomogeneous\n",
+    "from eradiate.scenes.illumination import Directional\n",
+    "\n",
+    "solver = OneDimSolver(SceneDict.empty().add([\n",
+    "    Lambertian({\n",
+    "        \"type\": \"lambertian\",\n",
+    "        \"reflectance\": 0.5, \n",
+    "        \"width\": 200\n",
+    "    }),\n",
+    "    RayleighHomogeneous({\n",
+    "        \"sigma_s\": 1e-2,\n",
+    "        \"height\": 40.,\n",
+    "        \"width\": 200.\n",
+    "    }),\n",
+    "    Directional({\n",
+    "        \"zenith\": 0.,\n",
+    "        \"azimuth\": 0.,\n",
+    "        \"irradiance\": 1.0e+6\n",
+    "    }),\n",
+    "    {\"integrator\": {\"type\": \"volpathmis\"}}\n",
+    "]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that this scene definition does _not_ include any scensor: the solver will take care of instantiating them and positioning them appropriately based on the angular configuration requested by the user.\n",
+    "\n",
+    "We can first run the simulation for a single angular configuration:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solver.run(\n",
+    "    zenith=0., \n",
+    "    azimuth=0.,\n",
+    "    spp=32000\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that since we defined our scene in kilometres, the recorded radiance is in W/km^2/sr/nm.\n",
+    "\n",
+    "We start the simulation with the `run` method. We specify the angular grid, as well as the number of samples."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "zenith_grid = np.arange(0., 90, 10.)\n",
+    "azimuth_grid = np.arange(0., 360.1, 10.)\n",
+    "\n",
+    "result = solver.run(\n",
+    "    zenith=zenith_grid, \n",
+    "    azimuth=azimuth_grid,\n",
+    "    spp=3200\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r, theta = np.meshgrid(zenith_grid, np.radians(azimuth_grid))\n",
+    "values = np.transpose(result)\n",
+    "\n",
+    "fig, ax = plt.subplots(subplot_kw=dict(projection='polar'))\n",
+    "pcm = ax.pcolormesh(theta, r, values, cmap=\"BuPu_r\")\n",
+    " \n",
+    "plt.colorbar(pcm)\n",
+    "plt.show()\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At this point, you can notice the noise in the output: the number of samples has been kept relatively low for this demo. There are lots of possible improvements to this solver and the scene elements we used, and they will be implemented gradually.\n",
+    "\n",
+    "This is the end of this demonstration. Eradiate has an even higher level of automation in store, which is showcaased in the third part of our demonstration!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -694,7 +837,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.7-final"
   }
  },
  "nbformat": 4,
