--- a/demo/3-rayleigh_solver_app/rayleigh_solver_app.ipynb
+++ b/demo/3-rayleigh_solver_app/rayleigh_solver_app.ipynb
@@ -70,6 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "my_config = {\n",
     "    'mode': {\n",
     "        'type': 'mono',\n",
@@ -77,7 +78,7 @@
     "    },\n",
     "    'illumination': {\n",
     "        'type': 'directional',\n",
-    "        'zenith': 35.,\n",
+    "        'zenith': 30.,\n",
     "        'azimuth': 0.\n",
     "    },\n",
     "    'surface': {\n",
@@ -85,7 +86,16 @@
     "        'reflectance': 0.35\n",
     "    },\n",
     "    'atmosphere': {\n",
-    "        'type': 'rayleigh_homogeneous'\n",
+    "        'type': 'rayleigh_homogeneous',\n",
+    "        'height': 100,\n",
+    "        'sigma_s_params': {\n",
+    "            'refractive_index': 1.0003\n",
+    "        }\n",
+    "    },\n",
+    "    'measure': {\n",
+    "        'type': 'distant',\n",
+    "        'zenith': np.linspace(0., 90., 10),\n",
+    "        'azimuth': np.linspace(0., 350., 36)\n",
     "    }\n",
     "}\n",
     "my_app = RayleighSolverApp(my_config)\n",
@@ -109,8 +119,8 @@
     "with open(\"config.yaml\", 'r') as stream:\n",
     "    try:\n",
     "        yaml_config = yaml.safe_load(stream)\n",
-    "        my_app = RayleighSolverApp(yaml_config)\n",
-    "        print(my_app._scene_dict)\n",
+    "        app = RayleighSolverApp(yaml_config)\n",
+    "        print(app._scene_dict)\n",
     "    except yaml.YAMLError as exc:\n",
     "        print(exc)"
    ]
@@ -120,6 +130,55 @@
    "metadata": {},
    "source": [
     "## 3. Run the simulation and visualise the results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To make the application execute the simulation, simply write:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_app.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The application collects the raw results that you can retrieve and postprocess at your will. These raw results are stored into a labeled multidimensional array object from the xarray python library that allows for easy postprocessing, including exporting the results data to netcdf file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_results = my_app.result\n",
+    "my_results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Additionally, ``RayleighSolverApp`` lets you visualize the results by producing specialised plots with the collected results. To produce a hemispherical plot, we call:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app.visualize(plot_type=\"hemispherical\")"
    ]
   },
   {
