Minor update to the demo notebook (part 3)

--- a/demo/3-rayleigh_solver_app/rayleigh_solver_app.ipynb
+++ b/demo/3-rayleigh_solver_app/rayleigh_solver_app.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With ``RayleighSolverApp``, you don't have to set the kernel variant anymore. ``RayleighSolverApp`` will take care of that for you. ``RayleighSolverApp`` takes a configuration dictionary as single public constructor argument. If you don't provide one, a default configuration dictionary will be used."
+    "With ``RayleighSolverApp``, you don't have to set the kernel variant anymore. ``RayleighSolverApp`` will take care of that for you. ``RayleighSolverApp`` takes a configuration dictionary as its single constructor argument. If you don't provide one, a default configuration dictionary will be used."
    ]
   },
   {
@@ -37,14 +37,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app.config"
+    "display(app.config)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When initialised, the application will converts that configuration dictionary into a scene dictionary:"
+    "When initialised, the application will use the configuration dictionary to create a corresponding scene dictionary:"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app._scene_dict"
+    "display(app._scene_dict)"
    ]
   },
   {
@@ -71,7 +71,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "my_config = {\n",
+    "\n",
+    "config = {\n",
     "    'mode': {\n",
     "        'type': 'mono',\n",
     "        'wavelength': 760.\n",
@@ -93,13 +94,14 @@
     "        }\n",
     "    },\n",
     "    'measure': {\n",
-    "        'type': 'distant',\n",
-    "        'zenith': np.linspace(0., 90., 10),\n",
-    "        'azimuth': np.linspace(0., 350., 36)\n",
+    "        'type': 'hemispherical',\n",
+    "        'spp': 1000,\n",
+    "        'zenith_res': 10.,\n",
+    "        'azimuth': 10.\n",
     "    }\n",
     "}\n",
-    "my_app = RayleighSolverApp(my_config)\n",
-    "my_app._scene_dict"
+    "app = RayleighSolverApp(my_config)\n",
+    "display(app._scene_dict)"
    ]
   },
   {
@@ -116,11 +118,12 @@
    "outputs": [],
    "source": [
     "import yaml\n",
-    "with open(\"config.yaml\", 'r') as stream:\n",
+    "\n",
+    "with open(\"config.yml\", 'r') as f:\n",
     "    try:\n",
-    "        yaml_config = yaml.safe_load(stream)\n",
+    "        yaml_config = yaml.safe_load(f)\n",
     "        app = RayleighSolverApp(yaml_config)\n",
-    "        print(app._scene_dict)\n",
+    "        display(app._scene_dict)\n",
     "    except yaml.YAMLError as exc:\n",
     "        print(exc)"
    ]
@@ -145,14 +148,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_app.run()"
+    "app.compute()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The application collects the raw results that you can retrieve and postprocess at your will. These raw results are stored into a labeled multidimensional array object from the xarray python library that allows for easy postprocessing, including exporting the results data to netcdf file."
+    "The application collects the raw results that you can retrieve and postprocess at your convenience. These raw results are stored into a labeled multidimensional array (`DataArray` from the [xarray](http://xarray.pydata.org) library) that allows for easy postprocessing, including exporting the results data to the netCDF format."
    ]
   },
   {
@@ -161,8 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_results = my_app.result\n",
-    "my_results"
+    "display(app.result)"
    ]
   },
   {
@@ -178,7 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app.visualize(plot_type=\"hemispherical\")"
+    "app.plot()"
    ]
   },
   {
@@ -191,8 +193,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.6 64-bit ('eradiate': conda)",
-   "name": "python37664biteradiateconda25a6c18de8134cf2a50733d323d5285d"
+   "display_name": "Python 3.7.7 64-bit",
+   "name": "python37764bit13027b374c7846a8b22a568d0e77d399"
   },
   "language_info": {
    "codemirror_mode": {
