updated value of spectral irradiance + minor fixes

--- a/demo/2-scene_construction/scene_construction.ipynb
+++ b/demo/2-scene_construction/scene_construction.ipynb
@@ -45,7 +45,7 @@
    "source": [
     "Once this is done, we can load a scene specified as an XML file. The proposed scene consists of a rectangular surface topped by a slab of participating medium featuring only Rayleigh scattering. The scene is illuminated by a directional source with a intensity of the same order of magnitude as the Sun's. We can take a look at the XML file, then come back here.\n",
     "\n",
-    "To load the scene into the computational kernel, we use the `load_xml` function:"
+    "To load the scene into the computational kernel, we use the `load_file` function:"
    ]
   },
   {
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the scene file has variable arguments which can be used to specify scene parameters upon loading. For example, we can change the resolution of the perspective camera:"
+    "Note that the scene file has variable arguments which can be used to specify scene parameters upon loading. For example, we can change the resolution of the perspective camera as well as the number of samples per pixel:"
    ]
   },
   {
@@ -186,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scene = load_file(\"scene.xml\", res=64, spp=4096)\n",
+    "scene = load_file(\"scene.xml\", res=128, spp=4096)\n",
     "render(scene)\n",
     "plot(scene)"
    ]
@@ -224,7 +224,7 @@
     "\n",
     "    # Homogeneous rayleigh-scattering plane-parallel atmosphere \n",
     "    # with dimensions 200 km x 200 km x 40 km. \n",
-    "    # Value of sigma_t is arbitrary.\n",
+    "    # Value of sigma_t is arbitrary but realistic.\n",
     "    \"atmosphere\": {\n",
     "        \"type\": \"cube\",\n",
     "        \"to_world\": \n",
@@ -249,13 +249,13 @@
     "    },\n",
     "\n",
     "    # Directional light source with zenith angle of 30° and \n",
-    "    # irradiance of 1 W/km^2/nm.\n",
+    "    # irradiance of 1.8 W/km^2/nm.\n",
     "    \"illumination\": {\n",
     "        \"type\": \"directional\",\n",
     "        \"direction\": [-0.5, 0, -0.8660254],\n",
     "        \"irradiance\": {\n",
     "            \"type\": \"uniform\",\n",
-    "            \"value\": 1e6\n",
+    "            \"value\": 1.8e6\n",
     "        }\n",
     "    },\n",
     "\n",
@@ -456,7 +456,7 @@
     "illumination = Directional({\n",
     "    \"zenith\": 30.,\n",
     "    \"azimuth\": 0.,\n",
-    "    \"irradiance\": 1.0e+6\n",
+    "    \"irradiance\": 1.8e+6\n",
     "})\n",
     "\n",
     "scene_dict.add(illumination)"
@@ -559,7 +559,7 @@
     "    Directional({\n",
     "        \"zenith\": 30.,\n",
     "        \"azimuth\": 0.,\n",
-    "        \"irradiance\": 1.0e+6\n",
+    "        \"irradiance\": 1.8e+6\n",
     "    }),\n",
     "    {\n",
     "        \"measure\": {\n",
@@ -753,8 +753,8 @@
    "outputs": [],
    "source": [
     "solver.run(\n",
-    "    zenith=0., \n",
-    "    azimuth=0.,\n",
+    "    vza=0., \n",
+    "    vaa=0.,\n",
     "    spp=32000\n",
     ")"
    ]
@@ -777,13 +777,13 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "zenith_grid = np.arange(0., 90, 10.)\n",
+    "zenith_grid = np.arange(0., 90., 10.)\n",
     "azimuth_grid = np.arange(0., 360.1, 10.)\n",
     "\n",
     "result = solver.run(\n",
-    "    zenith=zenith_grid, \n",
-    "    azimuth=azimuth_grid,\n",
-    "    spp=3200\n",
+    "    vza=zenith_grid, \n",
+    "    vaa=azimuth_grid,\n",
+    "    spp=4096\n",
     ")"
    ]
   },
@@ -810,7 +810,7 @@
    "source": [
     "At this point, you can notice the noise in the output: the number of samples has been kept relatively low for this demo. There are lots of possible improvements to this solver and the scene elements we used, and they will be implemented gradually.\n",
     "\n",
-    "This is the end of this demonstration. Eradiate has an even higher level of automation in store, which is showcaased in the third part of our demonstration!"
+    "This is the end of this demonstration. Eradiate has an even higher level of automation in store, which is showcased in the third part of our demonstration!"
    ]
   },
   {
