Updated notebooks after demo rehearsal

--- a/demo/2-scene_construction/scene_construction.ipynb
+++ b/demo/2-scene_construction/scene_construction.ipynb
@@ -356,9 +356,11 @@
    "source": [
     "from eradiate.scenes.lithosphere import Lambertian\n",
     "\n",
+    "scene_horizontal_size = 200.  # km\n",
+    "\n",
     "surface = Lambertian({\n",
     "    \"reflectance\": 0.5, \n",
-    "    \"width\": 200\n",
+    "    \"width\": scene_horizontal_size,\n",
     "})\n",
     "print(surface)"
    ]
@@ -430,9 +432,9 @@
     "from eradiate.scenes.atmosphere import RayleighHomogeneous\n",
     "\n",
     "atmosphere = RayleighHomogeneous({\n",
-    "    \"sigma_s\": 1e-2,\n",
-    "    \"height\": 40.,\n",
-    "    \"width\": 200.\n",
+    "    \"sigma_s\": 1e-2,  # km^-1\n",
+    "    \"height\": 40.,  # km\n",
+    "    \"width\": scene_horizontal_size  # km\n",
     "})\n",
     "\n",
     "scene_dict.add(atmosphere)"
@@ -456,7 +458,7 @@
     "illumination = Directional({\n",
     "    \"zenith\": 30.,\n",
     "    \"azimuth\": 0.,\n",
-    "    \"irradiance\": 1.8e+6\n",
+    "    \"irradiance\": 1.8e+6  # W/km^2/nm\n",
     "})\n",
     "\n",
     "scene_dict.add(illumination)"
@@ -837,7 +839,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7-final"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
