--- a/demo/3-rayleigh_solver_app/rayleigh_solver_app.ipynb
+++ b/demo/3-rayleigh_solver_app/rayleigh_solver_app.ipynb
@@ -97,10 +97,10 @@
     "        'type': 'hemispherical',\n",
     "        'spp': 1000,\n",
     "        'zenith_res': 10.,\n",
-    "        'azimuth': 10.\n",
+    "        'azimuth_res': 10.\n",
     "    }\n",
     "}\n",
-    "app = RayleighSolverApp(my_config)\n",
+    "app = RayleighSolverApp(config)\n",
     "display(app._scene_dict)"
    ]
   },
@@ -194,6 +194,7 @@
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3.7.7 64-bit",
+   "language": "python",
    "name": "python37764bit13027b374c7846a8b22a568d0e77d399"
   },
   "language_info": {
@@ -206,9 +207,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7-final"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
