Updated demo notebook to use the Perspective scene generation helper

--- a/demo/2-scene_construction/scene_construction.ipynb
+++ b/demo/2-scene_construction/scene_construction.ipynb
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The scene we just rendered can also be loaded from a Python dictionary. It is very important, however, to note that building a scene dictionary usually requires to have a variant instantiated."
+    "The scene we just rendered can also be loaded from a Python dictionary. It is very important, however, to note that building a scene dictionary usually requires to select a kernel variant."
    ]
   },
   {
@@ -328,7 +328,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import eradiate.kernel\n",
@@ -351,7 +353,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from eradiate.scenes.lithosphere import Lambertian\n",
@@ -375,7 +379,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "d = surface.kernel_dict()\n",
@@ -392,7 +398,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from eradiate.kernel.core.xml import load_dict\n",
@@ -409,7 +417,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "scene_dict.add(surface)\n",
@@ -468,7 +478,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One last thing is missing in our scene: we need a sensor to record light. Since we are rebuilding the scene we created before, we'll add a perspective camera. We can mix Eradiate's scene generation helpers with kernel scene specification dictionaries:"
+    "One last thing is missing in our scene: we need a sensor to record light. Since we are rebuilding the scene we created before, we'll add a perspective camera:"
    ]
   },
   {
@@ -477,35 +487,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scene_dict.add({\n",
-    "    \"measure\": {\n",
-    "        \"type\": \"perspective\",\n",
-    "        \"sampler\": {\n",
-    "            \"type\": \"independent\",\n",
-    "            \"sample_count\": 4096\n",
-    "        },\n",
-    "        \"film\": {\n",
-    "            \"type\": \"hdrfilm\",\n",
-    "            \"width\": 64,\n",
-    "            \"height\": 64,\n",
-    "            \"component_format\": \"float32\",\n",
-    "            \"pixel_format\": \"luminance\",\n",
-    "            \"rfilter\": {\"type\": \"box\"},\n",
-    "        },\n",
-    "        \"far_clip\": 1e7,\n",
-    "        \"to_world\": ScalarTransform4f\n",
-    "            .look_at(origin=[0, 400, 400],\n",
-    "                     target=[0, 0, 0],\n",
-    "                     up=[0, 0, 1])\n",
-    "    },\n",
-    "})"
+    "from eradiate.scenes.measure import Perspective\n",
+    "\n",
+    "scene_dict.add(Perspective({\n",
+    "    \"target\": [0, 0, 0],\n",
+    "    \"zenith\": 45.,\n",
+    "    \"azimuth\": 180.,\n",
+    "    \"distance\": 400. * np.sqrt(2),\n",
+    "    \"res\": 64,\n",
+    "    \"spp\": 4096,\n",
+    "}))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our scene is now only missing an integrator, which will specify the integration algorithm. Since we have a participating medium, we'll need a volume-enabled algorithm and use the volumetric path tracer plugin."
+    "Our scene is now only missing an integrator, which will specify the integration algorithm. Since we have a participating medium, we'll need a volume-enabled algorithm and use the volumetric path tracer plugin. We can mix Eradiate's scene generation helpers with kernel scene specification dictionaries:"
    ]
   },
   {
@@ -563,29 +561,15 @@
     "        \"azimuth\": 0.,\n",
     "        \"irradiance\": 1.8e+6\n",
     "    }),\n",
-    "    {\n",
-    "        \"measure\": {\n",
-    "            \"type\": \"perspective\",\n",
-    "            \"sampler\": {\n",
-    "                \"type\": \"independent\",\n",
-    "                \"sample_count\": 4096\n",
-    "            },\n",
-    "            \"film\": {\n",
-    "                \"type\": \"hdrfilm\",\n",
-    "                \"width\": 64,\n",
-    "                \"height\": 64,\n",
-    "                \"component_format\": \"float32\",\n",
-    "                \"pixel_format\": \"luminance\",\n",
-    "                \"rfilter\": {\"type\": \"box\"},\n",
-    "            },\n",
-    "            \"far_clip\": 1e7,\n",
-    "            \"to_world\": ScalarTransform4f\n",
-    "                .look_at(origin=[0, 400, 400],\n",
-    "                         target=[0, 0, 0],\n",
-    "                         up=[0, 0, 1])\n",
-    "        },\n",
-    "        \"integrator\": {\"type\": \"volpath\"}\n",
-    "    }\n",
+    "    Perspective({\n",
+    "        \"target\": [0, 0, 0],\n",
+    "        \"zenith\": 45.,\n",
+    "        \"azimuth\": 180.,\n",
+    "        \"distance\": 400. * np.sqrt(2),\n",
+    "        \"res\": 64,\n",
+    "        \"spp\": 4096,\n",
+    "    }),\n",
+    "    {\"integrator\": {\"type\": \"volpath\"}}\n",
     "])"
    ]
   },
@@ -751,7 +735,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "solver.run(\n",
@@ -773,7 +759,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -839,7 +827,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.7-final"
   }
  },
  "nbformat": 4,
