Fixes to demo notebook

--- a/demo/2-scene_construction/scene_construction.ipynb
+++ b/demo/2-scene_construction/scene_construction.ipynb
@@ -4,14 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Kernel interface"
+    "# Eradiate — Level-1 and Level-2 Interfaces"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Loading the kernel submodule is as simple as importing it:"
+    "In this tutorial, we will see how to interact with Eradiate using its less abstract interfaces. Throughout our progression, we will progressively build a simple scene, visualise it and perform very simple computations. We will explore the many possiblities we have to generate our scene and see in which situation each interface is best."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. The kernel interface (Level-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will first see how to directly interact with Eradiate's computational kernel. Loading the kernel submodule is as simple as importing it:"
    ]
   },
   {
@@ -71,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scene = load_file(\"scene.xml\", res=128, spp=512)"
+    "scene = load_file(\"scene.xml\", res=64, spp=512)"
    ]
   },
   {
@@ -186,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scene = load_file(\"scene.xml\", res=128, spp=4096)\n",
+    "scene = load_file(\"scene.xml\", res=64, spp=4096)\n",
     "render(scene)\n",
     "plot(scene)"
    ]
@@ -311,14 +325,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Scene generation interface"
+    "# 2. The scene generation interface (Level-2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, building a scene can become a tedious task. As scenes grow in size and complexity, writing XML files or Python dictionaries manually will become unpractical. We typically would like to have a tool to generate kernel scenes from a convenient set of instructions.\n",
+    "As we can see, building a scene can become a tedious task. As scenes grow in size and complexity, writing XML files or Python dictionaries manually will become impractical—if not impossible. We typically would like to have a tool to generate kernel scenes from a convenient set of instructions.\n",
     "\n",
     "The `eradiate.scenes` package serves this purpose and contains a set of convenience classes and functions to assist the user with scene creation. Let's see how we can generate the scene we've been working on so far.\n",
     "\n",
@@ -340,7 +354,7 @@
     "\n",
     "scene_dict = SceneDict.empty()\n",
     "print(f\"scene_dict.variant = {scene_dict.variant}\")\n",
-    "print(scene_dict)"
+    "display(scene_dict)"
    ]
   },
   {
@@ -366,7 +380,7 @@
     "    \"reflectance\": 0.5, \n",
     "    \"width\": scene_horizontal_size,\n",
     "})\n",
-    "print(surface)"
+    "display(surface)"
    ]
   },
   {
@@ -385,7 +399,7 @@
    "outputs": [],
    "source": [
     "d = surface.kernel_dict()\n",
-    "print(d)"
+    "display(d)"
    ]
   },
   {
@@ -423,7 +437,7 @@
    "outputs": [],
    "source": [
     "scene_dict.add(surface)\n",
-    "print(scene_dict)"
+    "display(scene_dict)"
    ]
   },
   {
@@ -492,7 +506,7 @@
     "scene_dict.add(Perspective({\n",
     "    \"target\": [0, 0, 0],\n",
     "    \"zenith\": 45.,\n",
-    "    \"azimuth\": 180.,\n",
+    "    \"azimuth\": 90.,\n",
     "    \"distance\": 400. * np.sqrt(2),\n",
     "    \"res\": 64,\n",
     "    \"spp\": 4096,\n",
@@ -564,7 +578,7 @@
     "    Perspective({\n",
     "        \"target\": [0, 0, 0],\n",
     "        \"zenith\": 45.,\n",
-    "        \"azimuth\": 180.,\n",
+    "        \"azimuth\": 90.,\n",
     "        \"distance\": 400. * np.sqrt(2),\n",
     "        \"res\": 64,\n",
     "        \"spp\": 4096,\n",
@@ -660,7 +674,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# One-dimensional solver interface"
+    "# 3. One-dimensional solver interface"
    ]
   },
   {
@@ -688,7 +702,7 @@
    "source": [
     "We now instantiate the `OneDimSolver` class. It takes a scene geometry, optical properties and illumination, and positions sensors automatically so as to compute the radiance leaving the scene at the top of the atmosphere.\n",
     "\n",
-    "`OneDimSolver` is designed to host pseudo one-dimensional scene, _i.e._ solve problems with two translational invariances. However, Eradiate's Mitsuba kernel does not exactly handle this type symmetries; instead, a normal three-dimensional scene is used. This means that special care must be taken when creating the scene. The scene we have been working on in the rest of this tutorial is designed with that in mind: its optical thickness in the horizontal directions is such that the point (0,0,0) is out of the radiative boundary layer and will therefore not be subject to boundary effects."
+    "`OneDimSolver` is designed to host pseudo one-dimensional scene, _i.e._ solve problems with two translational invariances. However, Eradiate's Mitsuba kernel does not exactly handle this type of symmetries; instead, a normal three-dimensional scene is used. This means that special care must be taken when creating the scene. The scene we have been working on in the rest of this tutorial is designed with that in mind: its optical thickness in the horizontal directions is such that the point (0,0,0) is out of the radiative boundary layer and will therefore not be subject to boundary effects."
    ]
   },
   {
@@ -727,7 +741,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that this scene definition does _not_ include any scensor: the solver will take care of instantiating them and positioning them appropriately based on the angular configuration requested by the user.\n",
+    "Note that this scene definition does _not_ include any sensor: the solver will take care of instantiating them and positioning them appropriately based on the angular configuration requested by the user.\n",
     "\n",
     "We can first run the simulation for a single angular configuration:"
    ]
