updated notebook and yaml config file for demo part 3

--- a/demo/3-rayleigh_solver_app/rayleigh_solver_app.ipynb
+++ b/demo/3-rayleigh_solver_app/rayleigh_solver_app.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Show how to instantiate RayleighSolverApp and configure it with a dictionary"
+    "## Instantiate and configure RayleighSolverApp"
    ]
   },
   {
@@ -89,6 +89,7 @@
     "    'atmosphere': {\n",
     "        'type': 'rayleigh_homogeneous',\n",
     "        'height': 100,\n",
+    "        'width': 10000,\n",
     "        'sigma_s_params': {\n",
     "            'refractive_index': 1.0003\n",
     "        }\n",
@@ -108,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Show how to do this from a YAML file"
+    "## Show how to do this from a YAML file"
    ]
   },
   {
@@ -132,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Run the simulation and visualise the results"
+    "## Run the simulation"
    ]
   },
   {
@@ -145,7 +146,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "app.compute()"
@@ -171,7 +174,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Additionally, ``RayleighSolverApp`` lets you visualize the results by producing specialised plots with the collected results. To produce a hemispherical plot, we call:"
+    "## Visualise the results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Additionally, ``RayleighSolverApp`` lets you visualize the results by producing specialised plots with the collected results. Because we set the type of measure to **hemispherical**, when we call its plot method, the application will automatically produce a hemispherical plot:"
    ]
   },
   {
@@ -187,15 +197,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Visualise RPV lobe flattening vs scattering coefficient "
+    "We can also plot the results in the principal plane:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app.plot(plot_type='pplane')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.7 64-bit",
+   "display_name": "Python 3.7.7 64-bit ('eradiate': conda)",
    "language": "python",
-   "name": "python37764bit13027b374c7846a8b22a568d0e77d399"
+   "name": "python_defaultSpec_1593503459708"
   },
   "language_info": {
    "codemirror_mode": {
