removed display of config and scene dictionaries

--- a/demo/3-rayleigh_solver_app/rayleigh_solver_app.ipynb
+++ b/demo/3-rayleigh_solver_app/rayleigh_solver_app.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(app.config)"
+    "# app.config"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(app._scene_dict)"
+    "# app._scene_dict"
    ]
   },
   {
@@ -102,7 +102,7 @@
     "    }\n",
     "}\n",
     "app = RayleighSolverApp(config)\n",
-    "display(app._scene_dict)"
+    "#display(app.config)"
    ]
   },
   {
@@ -124,7 +124,7 @@
     "    try:\n",
     "        yaml_config = yaml.safe_load(f)\n",
     "        app = RayleighSolverApp(yaml_config)\n",
-    "        display(app._scene_dict)\n",
+    "        # display(app.config)\n",
     "    except yaml.YAMLError as exc:\n",
     "        print(exc)"
    ]
@@ -208,20 +208,13 @@
    "source": [
     "app.plot(plot_type='pplane')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3.7.7 64-bit ('eradiate': conda)",
    "language": "python",
-   "name": "python_defaultSpec_1593503459708"
+   "name": "python_defaultSpec_1593510965331"
   },
   "language_info": {
    "codemirror_mode": {
